--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,26 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 defusedxml==0.7.1
 Django==4.1.7
+django-multiselectfield==0.1.12
+django-pygments==0.5
 djangorestframework==3.14.0
 httpie==3.2.1
 idna==3.4
 markdown-it-py==2.2.0
 mdurl==0.1.2
 multidict==6.0.4
+numpy==1.24.2
+pandas==1.5.3
 psycopg2-binary==2.9.5
 Pygments==2.14.0
 PySocks==1.7.1
+python-dateutil==2.8.2
 pytz==2022.7.1
 requests==2.28.2
 requests-toolbelt==0.10.1
 rich==13.3.2
+six==1.16.0
 sqlparse==0.4.3
 typing-extensions==4.5.0
 urllib3==1.26.15
+whitenoise==6.4.0
