--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ requests-toolbelt==0.10.1
 rich==13.3.2
 six==1.16.0
 sqlparse==0.4.3
-typing-extensions==4.5.0
+stripe==5.5.0
+typing_extensions==4.5.0
 urllib3==1.26.15
 whitenoise==6.4.0
